fix: renomeia o nome dos diretorios de trabalho

--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php;
-    root /var/www/diario-laravel/public;
+    root /var/www/laravel/public;
     client_max_body_size 10000M;
 
     location ~ \.php$ {
